--- a/4_3_LLM_Inference_Metrics.ipynb
+++ b/4_3_LLM_Inference_Metrics.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/st-fedotov/temp-notebooks/blob/main/4_3_LLM_Inference_Metrics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# LLM Engineering Essentials by Nebius Academy\n",
         "\n",
@@ -3188,7 +3198,8 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
